--- a/Projet_final_de_fin_de_formation/src/index.html
+++ b/Projet_final_de_fin_de_formation/src/index.html
@@ -7,8 +7,18 @@
     <title>Accueil</title>
 </head>
 <body>
+    <div class="imagebasecontainer">
+        <h2>Unbelievable</h2>
+        <h4>Quality.Comfort.</h4>
     <div class="div1">
-    <img class="img1" src="../img/ImageBase.jpg">
+    <img class="img1" src="../img/BaseShirt.jpg">
     </div>
+    <div class="div2">
+    <img class="img1" src="../img/BasePants3.jpg">
+</div>
+<div class="div3">
+    <img class="img3" src="../img/BaseShoes.jpg">
+</div>
+</div>
 </body>
 </html>
