--- a/Projet_final_de_fin_de_formation/src/index.html
+++ b/Projet_final_de_fin_de_formation/src/index.html
@@ -20,5 +20,61 @@
     <img class="img3" src="../img/BaseShoes.jpg">
 </div>
 </div>
+<div class="lineargrad">
+    <div class="popularcontainer"><h3 class="ventespop">Ventes populaires</h3>
+<div class="popular">
+    <div class="pop1">
+    <img class="imgpopular" src="../img/PhotoPopular.jpg">
+    <img class="blackline" src="../img/blackline.png">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    <button class="detailaccueil">Détails</button>
+</div>
+    <div class="pop2">  
+    <img class="imgpopular" src="../img/PhotoPopular.jpg">
+    <img class="blackline" src="../img/blackline.png">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    <button class="detailaccueil">Détails</button>
+</div>
+    <div class="pop3"> 
+    <img class="imgpopular" src="../img/PhotoPopular.jpg">
+    <img class="blackline" src="../img/blackline.png">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    <button class="detailaccueil">Détails</button>
+</div>
+    <div class="pop4"> 
+    <img class="imgpopular" src="../img/PhotoPopular.jpg">
+    <img class="blackline" src="../img/blackline.png">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    <button class="detailaccueil">Détails</button>
+</div>
+</div>
+</div>
+<div class="quatreinfoscontainer">
+    <div class="infoscontainer">
+    <img class="quatreinfos" src="../img/01.png">
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    </div>
+    </div>
+    <div class="infoscontainer">
+    <img class="quatreinfos" src="../img/02.png">
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    </div>
+    </div>
+    <div class="infoscontainer">
+    <img class="quatreinfos" src="../img/03.png">
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    </div>
+    </div>
+    <div class="infoscontainer">
+    <img class="quatreinfos" src="../img/04.png">
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
+    </div>
+    </div>
+</div>
+</div>
 </body>
 </html>
