--- a/Projet_final_de_fin_de_formation/src/index.html
+++ b/Projet_final_de_fin_de_formation/src/index.html
@@ -7,6 +7,7 @@
     <title>Accueil</title>
 </head>
 <body>
+    <div class="accueilbody">
     <div class="imagebasecontainer">
         <h2>Unbelievable</h2>
         <h4>Quality.Comfort.</h4>
@@ -14,7 +15,7 @@
     <img class="img1" src="../img/BaseShirt.jpg">
     </div>
     <div class="div2">
-    <img class="img1" src="../img/BasePants3.jpg">
+    <img class="img1" src="../img/BasePants.jpg">
 </div>
 <div class="div3">
     <img class="img3" src="../img/BaseShoes.jpg">
@@ -74,6 +75,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias expedita ad ullam quas, velit sint quibusdam nulla eos vitae voluptatem neque enim accusantium maiores, id voluptate voluptates suscipit delectus aliquid!
     </div>
     </div>
+</div>
 </div>
 </div>
 </body>
